# qoixx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  qoixx.hpp
.github/workflows/: linux.yml  mac.yml  windows.yml
LICENSES/: qoi.LICENSE
include/: qoixx.hpp
src/: qoibench.cpp  qoiconv.cpp  test.cpp
